<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Just Java</string>
    <string name="toppings_title">toppings</string>
    <string name="whippedcream_text">Whipped Cream</string>
    <string name="just_java_order_for">JustJava order for</string>
    <string name="send_email_via">Send email via ...</string>
    <string name="no_email_app_intent_warning">No email app to handle intent</string>
    <string name="max_cofee_cups_reached_warning">Can\'t order more than 100 cups of coffee</string>
    <string name="min_coffee_cups_reached_warning">Can\'t order less than 1 cup of coffee</string>
    <string name="name_text_colon">Name:</string>
    <string name="quantity_text_colon">Quantity:</string>
    <string name="whipped_cream_yes_colon">Whipped Cream = Yes</string>
    <string name="chocodip_colon_yes">ChocoDip = Yes</string>
    <string name="total_colon">Total:</string>
    <string name="danke_exclamation">Thank You!</string>
    <string name="order_capital">ORDER</string>
    <string name="order_summary_title">Order Summary</string>
    <string name="quantity_caps_title">Quantity</string>
    <string name="choco_dip_checkbox_text">Choco Dip</string>
    <string name="whipped_cream_checkbox_text">Whipped Cream</string>
    <string name="toppings_title_txtview">toppings</string>
    <string name="test_string">this is a <xliff:g id="name" >%s</xliff:g> </string>
</resources>
